--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     style="margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden"
   >
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
